@@ -3,10 +3,6 @@ package org.apache.mahout.sparkbindings.blas
 import org.apache.mahout.sparkbindings.drm.plan.OpRowRange
 import org.apache.mahout.sparkbindings.drm.DrmRddInput
 
-/**
- *
- * @author dmitriy
- */
 object Slicing {
 
   def rowRange(op: OpRowRange, srcA: DrmRddInput[Int]): DrmRddInput[Int] = {
