@@ -3,9 +3,6 @@ package org.apache.mahout.sparkbindings.test
 import org.scalatest.Suite
 import org.apache.log4j.{Level, Logger, BasicConfigurator}
 
-/**
- * @author dmitriy
- */
 trait LoggerConfiguration extends org.apache.mahout.test.LoggerConfiguration {
   this: Suite =>
 
