@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1523: Remove @author tags in sparkbindings (ssc)
+
   MAHOUT-1510: Goodbye MapReduce (ssc)
 
   MAHOUT-1519: Remove StandardThetaTrainer (Andrew Palumbo via ssc)
